[package]
name = "dbvi"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Terminal database viewer for vim users"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid"] }
clap = { version = "4.5.45", features = ["cargo", "derive"] }
